--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@volar-plugins/vetur": "latest",
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vue/eslint-config-prettier": "^7.0.0",
