--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "pinia": "^2.0.26",
     "vue": "^3.2.41"
   },
   "devDependencies": {
-    "@volar-plugins/vetur": "latest",
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^3.1.2",
+    "@volar-plugins/vetur": "latest",
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
